# parthi_multi-rag-chatpdf

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  Dockerfile  FINAL_SUMMARY.md  LICENSE  ONE_HOUR_WORKOUT.md  PACKAGE_ANALYSIS.md  README.md  app.py  docker-compose.yml  pyproject.toml  quickstart.ps1  quickstart.sh  requirements.txt
.github/workflows/: docker-build.yml
.streamlit/: config.toml  secrets.toml.example
