# ChatPDF - Modern Python Project with uv
# Use: uv sync (to install/sync dependencies)
# Use: uv run streamlit run app.py (to run the app)

[project]
name = "chatpdf"
version = "0.1.0"
description = "A RAG-based ChatPDF application using Streamlit and LangChain"
requires-python = ">=3.9, <3.13"
dependencies = [
    "streamlit==1.40.1",
    "langchain==0.3.9",
    "langchain-openai==0.2.10",
    "langchain-community==0.3.8",
    "langchain-huggingface>=0.1.0",
    "python-dotenv==1.0.1",
    # PDF processing
    "pypdf==5.1.0",
    # Embeddings and Vector Store
    "sentence-transformers==3.3.1",
    "faiss-cpu==1.9.0.post1",
    # OpenAI API
    "openai==1.57.0",
    # Supporting libraries
    "tiktoken==0.8.0",
    "numpy==1.26.4",
]

[tool.uv]
# Managed dependencies for uv
managed = true

[tool.uv.sources]

[dependency-groups]
dev = []
